[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/NewGameScene.gd" type="Script" id=1]
[ext_resource path="res://gui/lobby/NewGameLobby.tscn" type="PackedScene" id=2]

[node name="NewGameScene" type="Control"]
pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = -2.0
margin_bottom = -100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Margin", "Pause" ]

[node name="ModuleSelection" type="HBoxContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.06
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Size Flags", "custom_constants" ]
__meta__ = {
"_edit_group_": true
}

[node name="SelectModule" type="Button" parent="ModuleSelection"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 103.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Select Module"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="FileName" type="LineEdit" parent="ModuleSelection"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 107.0
margin_top = 1.0
margin_right = 727.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 2
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 4
text = "res://modules/Module1.gd"
editable = false
secret_character = "*"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Anchor", "Size Flags" ]

[node name="Lobby" parent="." instance=ExtResource( 2 )]
anchor_top = 0.08
anchor_bottom = 0.9
margin_bottom = 0.0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Size Flags" ]

[node name="Players" parent="Lobby" index="0"]
editor/display_folded = false
margin_bottom = 1.30002
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Margin", "Size Flags" ]

[node name="PlayerList" parent="Lobby/Players" index="0"]
margin_right = 180.0
margin_bottom = 333.0
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Size Flags" ]

[node name="Scroll" parent="Lobby/Players" index="1"]
margin_left = 184.0
margin_right = 727.0
margin_bottom = 333.0

[node name="UnitList" parent="Lobby/Players/Scroll" index="0"]
margin_right = 543.0
margin_bottom = 333.0

[node name="CreateCharacter" parent="Lobby" index="1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -95.0
margin_top = -36.0
margin_right = 95.0
margin_bottom = -15.0

[node name="UnitLimit" parent="Lobby" index="2"]
editor/display_folded = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -191.0
margin_top = -38.0
margin_right = -9.0
margin_bottom = -17.0

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.92
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin" ]
__meta__ = {
"_edit_group_": true
}

[node name="StartGame" type="Button" parent="Buttons"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 316.0
margin_right = 357.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start"
flat = false
align = 1
_sections_unfolded = [ "Grow Direction", "Margin" ]

[node name="LeaveGame" type="Button" parent="Buttons"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 361.0
margin_right = 410.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Leave"
flat = false
align = 1

[node name="ChooseModuleDialog" type="FileDialog" parent="."]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 27.0
margin_right = 550.0
margin_bottom = 539.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Open a File"
resizable = false
dialog_hide_on_ok = false
mode_overrides_title = true
mode = 0
access = 0
filters = PoolStringArray( "*.gd" )
show_hidden_files = false
current_dir = "res://"
current_file = ""
current_path = "res://"

[connection signal="pressed" from="ModuleSelection/SelectModule" to="ChooseModuleDialog" method="set_visible" binds= [ true ]]
[connection signal="pressed" from="Buttons/StartGame" to="." method="onStartGamePressed"]
[connection signal="pressed" from="Buttons/LeaveGame" to="." method="onLeaveGamePressed"]
[connection signal="file_selected" from="ChooseModuleDialog" to="." method="moduleSelected"]

[editable path="Lobby"]
